infrastructure/kubernetes/ingress/routes/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-gateway
  namespace: mrun-apps

spec:
  ingressClassName: nginx

  rules:
    - host: api.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: api-gateway
                port:
                  number: 80
